# minihasklisp

./: .gitignore  README.md  default.nix  fact.scm  fib.scm  flake.nix  minihasklisp.cabal  package.yaml  sort.scm
app/eval-expr/: Main.hs
app/minihasklisp/: Main.hs
eval-expr/: Main.hs
hal/: Main.hs
minihasklisp/: Main.hs
src/: Eval.hs  Expression.hs  JSONParser.hs  Parser.hs  SExpr.hs  UrlParser.hs
src/EvalExpr/: Expression.hs  JSONParser.hs  UrlParser.hs
src/Hal/: Eval.hs  ParseAndEval.hs  SExpr.hs
src/MiniHaskLisp/: Eval.hs  ParseAndEval.hs  SExpr.hs
src/eval-expr/: Expression.hs
src/minihasklisp/: Eval.hs  ParseAndEval.hs  SExpr.hs
src/parser/: Parser.hs
test/: ExpressionSpec.hs  ParserSpec.hs  SExprSpec.hs  Spec.hs
test/eval-expr/: ExpressionSpec.hs
test/minihasklisp/: SExprSpec.hs  bootstrap.scm  fib.scm  qsort3.scm  sort.scm
test/minihasklisp/files/: fact.scm
test/parser/: ParserSpec.hs
