cabal-version: 2.2

name: minihasklisp
version: 0.1.0.0
build-type: Simple

common defaults
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends: base

-- Parser library

library parser-lib
  import: defaults
  exposed-modules: Parser
  hs-source-dirs: src/parser

test-suite parser-spec
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: ParserSpec
  hs-source-dirs: test/parser
  build-depends:
    hspec,
    parser-lib

-- minihasklisp project

library minihasklisp-lib
  import: defaults
  exposed-modules:
    Eval
    ParseAndEval
    SExpr
  hs-source-dirs: src/minihasklisp
  build-depends: parser-lib

executable minihasklisp
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app/minihasklisp
  build-depends:
    haskeline,
    minihasklisp-lib

test-suite minihasklisp-spec
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: SExprSpec
  hs-source-dirs: test/minihasklisp
  build-depends:
    hspec,
    minihasklisp-lib,
    parser-lib

